# connections-rl-env

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_connections_env.py  benchmark_kaggle_q_learning.py  connections_perf_baseline.json
connections_rl/: __init__.py  env.py  presets.py  puzzles.py  registration.py  vector_env.py  wrappers.py
connections_rl/data/: SOURCE.md  puzzles.json
docs/: architecture.md  benchmarks.md  masking.md
examples/: README.md  train_q_learning_baseline.py
scripts/: gen_connections_baseline.py  perf_guardrail_connections.py
tests/: test_connections_env.py
